# persona-convergence

./: .gitignore  .gitmodules  pyproject.toml  readme.md  setup.py
experiments/: forward-dist.ipynb  gpt2-scratch.ipynb  gpt2.ipynb
notebooks/: tiny-stories-test.ipynb
persona_convergence/: tiny_stories.py  utils.py
requirements/: common.txt  cpu.txt  gpu.txt  pre.txt
